analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/destructuringNonLocal2.kt
class C {
    val (e) =

    <expr>class Nested</expr>
}